Fix: Sanitize setting fields value.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "parth/login-with-github",
     "autoload": {
         "psr-4": {
-            "Github\\Login\\": "./src/"
+            "LWG\\Auth\\": "./src/"
         }
     },
     "authors": [
